--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Cheat Sheet Project</title>
   </head>
+
+  <header>
+    <h1>Welcome to Alden's Web Dev Cheat Tables</h1>
+    <h2>Take a seat! Pick a table</h2>
+    <nav>
+      <ul>
+        <li>HTML Head Elements</li>
+        <li>JavaScript Array Methods</li>
+        <li>Bootstrap Reference</li>
+        <li>Pantone Colors of the Year</li>
+      </ul>
+    </nav>
+  </header>
+  
   <body>
     <div class="title_box">
       <h1>Pantone Colors of the Year</h1>
