--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="codecademy cheatsheet project">
     <meta name="keywords" content="HTML, CSS, JavaScript, colors, Pantone">
     <meta name="author" content="Alden Bruce">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script 
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
+    </script>
     <link rel="stylesheet" href="./style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +24,7 @@
       <ul>
         <li>HTML Head Elements</li>
         <li>JavaScript Array Methods</li>
-        <li>Bootstrap Reference</li>
+        <li>Bootstrap Setup Reference</li>
         <li>Pantone Colors of the Year</li>
       </ul>
     </nav>
