--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   </header>
   
   <body>
-    <div class="title_box">
+    <div class=containter-fluid">
+      <h1>HTML Head Elements</h1>
+    </div>
+    <div class="container-fluid, title_box">
       <h1>Pantone Colors of the Year</h1>
     </div>
     <table class="pantone_table">
