--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
   </header>
   
   <body>
-    <div class=containter-fluid">
+    <div class=container-fluid">
       <h1>HTML Head Elements</h1>
+      <p>A reference of HTML Head Elements formatted using grid.</p>
     </div>
     <div class="container-fluid, title_box">
       <h1>Pantone Colors of the Year</h1>
+      <p>A reference of past Pantone Color Institute's colors of the year formatted using HTML tables.</p>
     </div>
     <table class="pantone_table">
       <tr class="column_titles">
