--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <h2>Take a seat! Pick a table</h2>
     <nav>
       <ul>
-        <li>HTML Head Elements</li>
-        <li>JavaScript Array Methods</li>
-        <li>Bootstrap Setup Reference</li>
+        <li><a href="#htmlhead">HTML Head Elements</a></li>
+        <li><a href="#arraymethods">JavaScript Array Methods</a></li>
+        <li><a href="#pantone_table">Bootstrap Setup Reference</a></li>
         <li>Pantone Colors of the Year</li>
       </ul>
     </nav>
@@ -39,7 +39,7 @@
       <h1>Pantone Colors of the Year</h1>
       <p>A reference of past Pantone Color Institute's colors of the year formatted using HTML tables.</p>
     </div>
-    <table class="pantone_table">
+    <table id="pantone_table">
       <tr class="column_titles">
         <td>Year</td>
         <td>Name</td>
