--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
   <header>
     <h1>Welcome to Alden's Web Dev Cheat Tables</h1>
     <h2>Take a seat! Pick a table</h2>
-    <nav>
-      <ul>
-        <li><a href="#htmlhead">HTML Head Elements</a></li>
-        <li><a href="#arraymethods">JavaScript Array Methods</a></li>
-        <li><a href="#pantone_table">Bootstrap Setup Reference</a></li>
-        <li>Pantone Colors of the Year</li>
+    <nav class= "navbar navbar-expand-sm bg-dark">
+      <div class="container-fluid">
+        <ul class="navbar-menu">
+          <li class="nav-item"><a class="nav-link" href="#htmlhead">HTML Head Elements</a></li>
+          <li class="nav-item"><a class="nav-link" href="#arraymethods">JavaScript Array Methods</a></li>
+          <li class="nav-item"><a class="nav-link" href="#bootstrapref">Bootstrap Setup Reference</a></li>
+          <li class="nav-item"><a class="nav-link" href="#pantone_table">Pantone Colors of the Year</a></li>
       </ul>
     </nav>
   </header>
