--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           <li class="nav-item"><a class="nav-link" href="#arraymethods">JavaScript Array Methods</a></li>
           <li class="nav-item"><a class="nav-link" href="#bootstrapref">Bootstrap Setup Reference</a></li>
           <li class="nav-item"><a class="nav-link" href="#pantone_table">Pantone Colors of the Year</a></li>
-      </ul>
+        </ul>
+      </div>
     </nav>
   </header>
   
