--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <h1>Welcome to Alden's Web Dev Cheat Tables</h1>
     <h2>Take a seat! Pick a table</h2>
-    <nav class= "navbar navbar-expand-sm bg-dark">
+    <nav class= "navbar navbar-expand-sm bg-light">
       <div class="container-fluid">
         <ul class="navbar-menu">
           <li class="nav-item"><a class="nav-link" href="#htmlhead">HTML Head Elements</a></li>
